Typo in docker-compose.yml
A little typo I stumbled across :)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   ondemand:
-    image: gchr.io/acouvreur/traefik-ondemand-service:latest
+    image: ghcr.io/acouvreur/traefik-ondemand-service:latest
     command:
       - --swarmMode=true
     volumes:
